Fix T61563: Info space prints matrices as flat tuple

Add support for printing multi-dimensional arrays.